--- a/iths-lab3/app/components/Header.module.css
+++ b/iths-lab3/app/components/Header.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 20px;
     background-color: #333;
-    color: #fff;
+    color: whitesmoke;
   }
   
   .title {
